--- a/index.html
+++ b/index.html
@@ -188,31 +188,31 @@
       <div> <p class="pd">Product:</p></div>
       <div class = "img-display">
         <div class = "img-showcase">
-          <img src = "shoes_images/shoe_1.jpg" alt = "shoe image">
-          <img src = "shoes_images/shoe_2.jpg" alt = "shoe image">
-          <img src = "shoes_images/shoe_3.jpg" alt = "shoe image">
-          <img src = "shoes_images/shoe_4.jpg" alt = "shoe image">
+          <img src = "shoe_1.jpg" alt = "shoe image">
+          <img src = "shoe_2.jpg" alt = "shoe image">
+          <img src = "shoe_3.jpg" alt = "shoe image">
+          <img src = "shoe_4.jpg" alt = "shoe image">
         </div>
       </div>
       <div class = "img-select">
         <div class = "img-item">
           <a href = "#" data-id = "1">
-            <img src = "shoes_images/shoe_1.jpg" alt = "shoe image">
+            <img src = "shoe_1.jpg" alt = "shoe image">
           </a>
         </div>
         <div class = "img-item">
           <a href = "#" data-id = "2">
-            <img src = "shoes_images/shoe_2.jpg" alt = "shoe image">
+            <img src = "shoe_2.jpg" alt = "shoe image">
           </a>
         </div>
         <div class = "img-item">
           <a href = "#" data-id = "3">
-            <img src = "shoes_images/shoe_3.jpg" alt = "shoe image">
+            <img src = "shoe_3.jpg" alt = "shoe image">
           </a>
         </div>
         <div class = "img-item">
           <a href = "#" data-id = "4">
-            <img src = "shoes_images/shoe_4.jpg" alt = "shoe image">
+            <img src = "shoe_4.jpg" alt = "shoe image">
           </a>
         </div>
       </div>
