--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ecommerce Webpage</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
   </head>
   <body>
@@ -29,31 +29,31 @@
         <div> <p class="pd">Product:</p></div>
         <div class = "img-display">
           <div class = "img-showcase">
-            <img src = "1.jpeg" alt = "1 image">
-            <img src = "2.jpeg" alt = "2 image">
-            <img src = "3.jpge" alt = "3 image">
-            <img src = "4.jpg"e alt = "4 image">
+            <img src = "Chairs/1.jpeg" alt = "1 image">
+            <img src = "Chairs/2.jpeg" alt = "2 image">
+            <img src = "Chairs/3.jpge" alt = "3 image">
+            <img src = "Chairs/4.jpg"e alt = "4 image">
           </div>
         </div>
         <div class = "img-select">
           <div class = "img-item">
             <a href = "#" data-id = "9">
-              <img src = "1.jpeg" alt = "1 image">
+              <img src = "Chairs/1.jpeg" alt = "1 image">
             </a>
           </div>
           <div class = "img-item">
             <a href = "#" data-id = "10">
-              <img src = "2.jpeg" alt = "2 image">
+              <img src = "Chairs/2.jpeg" alt = "2 image">
             </a>
           </div>
           <div class = "img-item">
             <a href = "#" data-id = "11">
-              <img src = "3.jpeg" alt = "3 image">
+              <img src = "Chairs/3.jpeg" alt = "3 image">
             </a>
           </div>
           <div class = "img-item">
             <a href = "#" data-id = "12">
-              <img src = "4.jpeg" alt = "4 image">
+              <img src = "Chairs/4.jpeg" alt = "4 image">
             </a>
           </div>
         </div>
@@ -108,31 +108,31 @@
           <div> <p class="pd">Product:</p></div>
           <div class = "img-display">
             <div class = "img-showcase">
-              <img src = "t1.png" alt = " image">
-              <img src = "t2.png" alt = " image">
-              <img src = "t3.png" alt = "image">
-              <img src = "t4.png" alt = " image">
+              <img src = "T-shirts/t1.png" alt = " image">
+              <img src = "T-shirts/t2.png" alt = " image">
+              <img src = "T-shirts/t3.png" alt = "image">
+              <img src = "T-shirts/t4.png" alt = " image">
             </div>
           </div>
           <div class = "img-select">
             <div class = "img-item">
               <a href = "#" data-id = "5">
-                <img src = "t1.png" alt = " image">
+                <img src = "T-shirts/t1.png" alt = " image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "6">
-                <img src = "t2.png" alt = "image">
+                <img src = "T-shirts/t2.png" alt = "image">
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "7">
-                <img src = "t3.png" alt = "image" >
+                <img src = "T-shirts/t3.png" alt = "image" >
               </a>
             </div>
             <div class = "img-item">
               <a href = "#" data-id = "8">
-                <img src = "t4.png" alt = " image">
+                <img src = "T-shirts/t4.png" alt = " image">
               </a>
             </div>
           </div>
@@ -188,31 +188,31 @@
       <div> <p class="pd">Product:</p></div>
       <div class = "img-display">
         <div class = "img-showcase">
-          <img src = "shoe_1.jpg" alt = "shoe image">
-          <img src = "shoe_2.jpg" alt = "shoe image">
-          <img src = "shoe_3.jpg" alt = "shoe image">
-          <img src = "shoe_4.jpg" alt = "shoe image">
+          <img src = "shoes_images/shoe_1.jpg" alt = "shoe image">
+          <img src = "shoes_images/shoe_2.jpg" alt = "shoe image">
+          <img src = "shoes_images/shoe_3.jpg" alt = "shoe image">
+          <img src = "shoes_images/shoe_4.jpg" alt = "shoe image">
         </div>
       </div>
       <div class = "img-select">
         <div class = "img-item">
           <a href = "#" data-id = "1">
-            <img src = "shoe_1.jpg" alt = "shoe image">
+            <img src = "shoes_images/shoe_1.jpg" alt = "shoe image">
           </a>
         </div>
         <div class = "img-item">
           <a href = "#" data-id = "2">
-            <img src = "shoe_2.jpg" alt = "shoe image">
+            <img src = "shoes_images/shoe_2.jpg" alt = "shoe image">
           </a>
         </div>
         <div class = "img-item">
           <a href = "#" data-id = "3">
-            <img src = "shoe_3.jpg" alt = "shoe image">
+            <img src = "shoes_images/shoe_3.jpg" alt = "shoe image">
           </a>
         </div>
         <div class = "img-item">
           <a href = "#" data-id = "4">
-            <img src = "shoe_4.jpg" alt = "shoe image">
+            <img src = "shoes_images/shoe_4.jpg" alt = "shoe image">
           </a>
         </div>
       </div>
